feat: enhance user registration with password encoding and validation checks